syntax = "proto3";
package instantbible.engine;

message ReverseIndexEntry {
  bytes map_bytes = 1;
  repeated bytes counts_map_data = 2;
  repeated bytes highlights_map_data = 3;
}

message IndexData {
  bytes fst = 1;
  repeated ReverseIndexEntry reverseIndexEntries = 2;
  repeated string highlightWords = 3;
  bytes translationVerses = 4;
  repeated string translationVersesStrings = 5;
  bytes popularity = 6;
}
