syntax = "proto3";
package instantbible.service;

import "data.proto";

message Response {
  message VerseResult {
    instantbible.data.VerseKey key = 1;
    repeated double translationScores = 2;
    double total_score = 3;
  }

  message Timings {
    int32 tokenize = 1;
    int32 fst = 2;
    int32 score = 3;
    int32 rank = 4;
    int32 total = 5;
  }

  repeated VerseResult results = 1;
  repeated string foundTokens = 2;
  Timings timings = 3;
}